@@ -1,4 +1,7 @@
 2012-02-11 arnaud.fontaine
+* Do not show overflow on maximized mode as scrollbars are handled by Ace itself.
+
+2012-02-11 arnaud.fontaine
 * Add full-screen class meaningful when this will be accepted by W3C.
 
 2012-01-25 arnaud.fontaine
